--- a/index.html
+++ b/index.html
@@ -354,12 +354,12 @@
     <!-- Services Section  Start -->
     <section class="services">
         <div class="box">
-            <img src="https://cdn-icons.flaticon.com/png/128/3796/premium/3796180.png?token=exp=1640642092~hmac=04bb94ffe69d36c4b6d5177492c11170" alt="">
+            <img src="https://cdn-icons-png.flaticon.com/128/411/411776.png" alt="">
             <h3>free delivery</h3>
             <p>emque exercitationem libero odit, repellendus dolorem.emque.</p>
         </div>
         <div class="box">
-            <img src="https://cdn-icons.flaticon.com/png/128/3512/premium/3512740.png?token=exp=1640642166~hmac=14aaace749b978df092cc0a61a9613ae" alt="">
+            <img src="https://cdn-icons-png.flaticon.com/128/1035/1035086.png" alt="">
             <h3>secure payments</h3>
             <p>emque exercitationem libero odit, repellendus dolorem.emque.</p>
         </div>
